@@ -5,7 +5,7 @@ Changelog of lizard-map
 1.20 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Added mapnik_linestyle to Legend object.
 
 
 1.19 (2010-10-27)
@@ -18,6 +18,7 @@ Changelog of lizard-map
 1.18 (2010-10-15)
 -----------------
 
+>>>>>>> .r14653
 - Fixed bug in statistics export when there wasn't a percentile value set.
 
 - Small values in the statistics display don't end up as ``0.00`` anymore, but
